output-format option for stir_math for dynamic/parametric images

--- a/documentation/release_4.1.htm
+++ b/documentation/release_4.1.htm
@@ -45,7 +45,9 @@
     on data from the Siemens mMR. See the example parameter file in <tt>examples/samples/OSMAPOSL_NiftyPET.par</tt>.
     NiftyPET's GPU-accelerated unlisting has also been wrapped, also allowing for randoms estimation and norm extraction.
   </li>
-<li><tt>estimate_triple_energy_window_scatter_sinogram</tt> can use different width for the upper and lower energy windows</li>
+  <li><tt>estimate_triple_energy_window_scatter_sinogram</tt> can use different width for the upper and lower energy windows</li>
+  <li><tt>stir_math</tt> now supports the <tt>--output-format</tt> option for dyanmic and parametric images as well. (An example
+  file using the <tt>Multi</tt> format is given in the <tt>examples/samples</tt> folder).</li>
 </ul>
 
 
