--- a/documentation/release_4.1.htm
+++ b/documentation/release_4.1.htm
@@ -48,6 +48,11 @@
   <li><tt>estimate_triple_energy_window_scatter_sinogram</tt> can use different width for the upper and lower energy windows</li>
   <li><tt>stir_math</tt> now supports the <tt>--output-format</tt> option for dyanmic and parametric images as well. (An example
   file using the <tt>Multi</tt> format is given in the <tt>examples/samples</tt> folder).</li>
+  <li>Interfile and ITK image IO now understand some date/time fields. This required a change to our Interfile
+    version specification to be able to handle time-zones. These can now be added via the same suffix as used by DICOM, e.g.
+    <tt>10:01:01.00+0130</tt>.<br />
+    <strong>Warning:</strong> If the time-zone is not specified, we assume it's in the current time-zone without DST. This is dangerous,
+    but allows us to subtract time-fields.</li>
 </ul>
 
 
