added new utility create_multi_header
Also added some doc on the Multi file-format in the User's Guide

--- a/documentation/release_5.0.htm
+++ b/documentation/release_5.0.htm
@@ -74,6 +74,10 @@ improvements to the documentation.
   this version. (Note that this functionality depends on an external
   <a href=https://github.com/nlohmann/json>JSON library</a>.)
 </li>
+<li>Addition of a new utility <tt>create_multi_header</tt> which can be used to create
+  a single header pointing to several files (e.g. one image per time frame). The header
+  uses the (STIR-specific) <tt>multi</tt> format.
+  </li>
 </ul>
 
 
