--- a/documentation/release_5.0.htm
+++ b/documentation/release_5.0.htm
@@ -77,6 +77,9 @@ improvements to the documentation.
 <li>Addition of a new utility <tt>create_multi_header</tt> which can be used to create
   a single header pointing to several files (e.g. one image per time frame). The header
   uses the (STIR-specific) <tt>multi</tt> format.
+</li>
+<li>Addition of a new utility <tt>extract_single_images_from_parametric_image</tt> to
+  get each parametric image in a single file.
   </li>
 </ul>
 
