generate_image parameter files now support the originating system keyword

--- a/documentation/release_5.0.htm
+++ b/documentation/release_5.0.htm
@@ -80,7 +80,9 @@ improvements to the documentation.
 </li>
 <li>Addition of a new utility <tt>extract_single_images_from_parametric_image</tt> to
   get each parametric image in a single file.
-  </li>
+</li>
+<li><tt>generate_image</tt> parameter files now support the <tt>originating system</tt>.
+</li>
 </ul>
 
 
