Let parametric images optionally store all time frames
Previously, a parametric image was supposed to have only 1 time frame. That was however not imposed,
leading to problems. With the current update, we remove the restriction.

Fixes #676

--- a/documentation/release_5.0.htm
+++ b/documentation/release_5.0.htm
@@ -90,6 +90,11 @@ improvements to the documentation.
 <ul>
 <li>Many operations with <code>ProjDataInMemory</code> are now much faster (it now uses an underlying 1D array).
 </li>
+<li>
+  <code>ParametricDiscretisedDensity</code> objects can now have an <code>ExamInfo</code> object
+  with multiple time frames (corresponding to the time frames of the data where the parametric image is derived from).
+  In some cases, there could only be a single time frame (start to end of the study).
+  </li>
 </ul>
 
 
