moved recon_test/test_modelling.sh to recon_test_pack/run_tests_modelling.sh

--- a/documentation/release_5.0.htm
+++ b/documentation/release_5.0.htm
@@ -140,7 +140,10 @@ improvements to the documentation.
 
 <h3>recon_test_pack changes</h3>
 <ul>
-<li>updated version number and added some clarification to the README.txt</li>
+  <li>updated version number and added some clarification to the README.txt</li>
+  <li>moved the <tt>src/recon_test/test_modelling.sh</tt> and associated input files to the <tt>recon_test_pack</tt>.
+    It is also modified to be independent of ECAT7 and now runs again.
+    </li>
  </ul>
 
 <h3>Other changes to tests</h3>
