list_image_info now supports dynamic images

--- a/documentation/release_5.0.htm
+++ b/documentation/release_5.0.htm
@@ -57,7 +57,7 @@ improvements to the documentation.
 
 <h3>New functionality</h3>
 <ul>
-  <li>The (still preliminary) code for Maximum Likelihood estimation of normalisation factors now includes estimation of geometric factors. See<br />
+  <li>The (still preliminary) code for Maximum Likelihood estimation of normalisation factors now includes estimation of geometric factors in 3D as well. See<br />
     Tahereh Niknejad, Stefaan Tavernier, Joao Varela, and Kris Thielemans,
     <cite>Validation of 3D Model-Based Maximum-Likelihood Estimation of Normalisation Factors for Partial Ring Positron Emission Tomography</cite>
     In 2016 IEEE Nuclear Science Symposium, Medical Imaging Conference and Room-Temperature Semiconductor Detector Workshop (NSS/MIC/RTSD), 1–5.
@@ -82,6 +82,8 @@ improvements to the documentation.
   get each parametric image in a single file.
 </li>
 <li><tt>generate_image</tt> parameter files now support the <tt>originating system</tt>.
+</li>
+<li><tt>list_image_info</tt> now works for dynamic images, with a new <tt>--per-volume</tt> option to list min/max/sum for every volume.
 </li>
 </ul>
 
