--- a/documentation/release_4.1.htm
+++ b/documentation/release_4.1.htm
@@ -38,6 +38,9 @@
   <li>Reading of GE HDF5 data (GE fileformat RDF 10) for the GE Signa PET/MR, including listmode, sinograms and calibration files.
     This code is TOF-ready, but TOF is not enabled pending merge of the TOF Pull Request. Therefore, all reconstructions
     will be non-TOF.
+  </li>
+  <li>A new script <tt>create_fdef_from_listmode.sh</tt> that can be used to create a single-time
+    frame definition file for a given listmode file.
   <li>
     Addition of the Relative Difference Prior [J. Nuyts, et al., 2002].
   </li>
