--- a/documentation/release_4.1.htm
+++ b/documentation/release_4.1.htm
@@ -53,6 +53,7 @@
     <tt>10:01:01.00+0130</tt>.<br />
     <strong>Warning:</strong> If the time-zone is not specified, we assume it's in the current time-zone without DST. This is dangerous,
     but allows us to subtract time-fields.</li>
+  <li>Added a utility <tt>list_lm_info</tt>.
 </ul>
 
 
