Updated release_5 documentation.

--- a/documentation/release_5.0.htm
+++ b/documentation/release_5.0.htm
@@ -85,6 +85,8 @@ improvements to the documentation.
 </li>
 <li><tt>list_image_info</tt> now works for dynamic images, with a new <tt>--per-volume</tt> option to list min/max/sum for every volume.
 </li>
+<li><tt>SSRB</tt> now has the option of taking a template sinogram.
+</li>
 </ul>
 
 
