--- a/documentation/release_5.0.htm
+++ b/documentation/release_5.0.htm
@@ -99,7 +99,7 @@ improvements to the documentation.
   with multiple time frames (corresponding to the time frames of the data where the parametric image is derived from).
   In some cases, there could only be a single time frame (start to end of the study).
   </li>
-<li><tt>apply_patlak_to_images</tt> no longers uses an existing file as a template for the dynamic but will overwrite it.</tt>
+<li><tt>apply_patlak_to_images</tt> no longer uses an existing file as a template for the dynamic image but will overwrite it.</li>
 </ul>
 
 
