add recon_test_pack test for scatter estimation
this is a round-trip test (simulate, estimate) with a non-trivial scale.

To do this, I've moved simulation lines from run_test_simulate_and_recon.sh
to a new script simulate_PET_data_for_tests.sh, especially is it needs
some ugly work-arounds to add energy info.

--- a/documentation/release_4.1.htm
+++ b/documentation/release_4.1.htm
@@ -127,7 +127,7 @@ We have currently no work-around (aside from using <code>GRAPHICS=PGM</code> or
  </ul>
 
 <h3>recon_test_pack changes</h3>
-None
+<li>added a test for scatter estimation</li>
 
 <h3>Other changes to tests</h3>
 <ul>
