Updates release notes [ci skip]

--- a/documentation/release_4.1.htm
+++ b/documentation/release_4.1.htm
@@ -117,6 +117,10 @@ We have currently no work-around (aside from using <code>GRAPHICS=PGM</code> or
   Changes to GATE/root cylindrical PET geometry interpretation,
   see <a href="https://github.com/UCL/STIR/pull/569">PR 569</a>.</li>
 </li>
+<li>
+    OpenGATE energy information is MeV. Added a method to convert between MeV to (STIR convention) keV units when
+    reading root files.
+</li>
 </ul>
 
 <h3>Documentation changes</h3>
