Big changes: Documentation, Hesssian methods, cleanup
Updated documentation, added to release 4.1 notes. Added notes regarding each method and variables.

accumulate_Hessian_times_input() method included.

set and get scalar value

--- a/documentation/release_4.1.htm
+++ b/documentation/release_4.1.htm
@@ -25,7 +25,7 @@
         </li>
         <li>Ander Biguri (UCL) for extending the Signa support to other GE scanners using RDF9</li>
         <li>Richard Brown (UCL) for wrapping of NiftyPET's GPU functionality for projecting and unlisting</li>
-        <li>Robert Twyman (UCL) for Relative Difference Prior, computation of the log-likelihood modification, and GATE geometry check fixes. </li>  
+        <li>Robert Twyman (UCL) for Relative Difference and Log-Cosh Priors, computation of the log-likelihood modification, and GATE geometry check fixes. </li>
       </ul>
     </p>
 
@@ -45,7 +45,7 @@
   <li>A new script <tt>create_fdef_from_listmode.sh</tt> that can be used to create a single-time
     frame definition file for a given listmode file.
   <li>
-    Addition of the Relative Difference Prior [J. Nuyts, et al., 2002].
+    Addition of the Relative Difference Prior [J. Nuyts, et al., 2002] and Log-cosh prior.
   </li>
   <li>NiftyPET's GPU projectors have been wrapped. If NiftyPET is installed, these projectors can be used 
     on data from the Siemens mMR. See the example parameter file in <tt>examples/samples/OSMAPOSL_NiftyPET.par</tt>.
