require ScatterEstimation::set_up() to be called
Formerly, process_data() called set_up(), but as that was virtual, that could lead
to surprising results as we don't know what a derived class needs. Therefore,
process_data() no longer does this, and requires the user to do it (as in other
places in STIR).

WARNING: this is a backwards incompatible change.

--- a/documentation/release_4.1.htm
+++ b/documentation/release_4.1.htm
@@ -81,7 +81,7 @@
       The old parsing keyword <tt>Bin normalisation type</tt> will still work but is deprecated
       and will be removed in a future version.
     </li>
-    <li>scatter estimation uses now more defaults such that you need to have less files around.</li>
+    <li>scatter estimation uses now more defaults such that you need to have less files.</li>
     <li><code>ScatterEstimation</code> has now many more <code>set*</code> functions such that most
       (all?) parameters can be set from C++/Python (i.e. without parsing).
     </li>
@@ -185,7 +185,11 @@ from the above):</H2>
 </ul>
   
 <h3>Other code changes</h3>
-<p>See the ChangeLog</p>
+<p>See the ChangeLog, specific items:</p>
+<ul>
+  <li><code>ScatterEstimation</code> now requires calling <code>set_up()</code> explicitly.</li>
+</ul>
+
 
 </body>
 
