--- a/documentation/release_5.0.htm
+++ b/documentation/release_5.0.htm
@@ -66,6 +66,15 @@ improvements to the documentation.
   <li>
       Additional demo demonstrating the use the objective function and gradient ascent optimisation, see <tt>examples/src/demo4_obj_fun.cxx</tt>.
   </li>
+  <li>
+    <tt>ROOT</tt> files produced by <tt>GATE</tt> can now be interpreted using ``virtual crystals", i.e. by inserting
+    ``dummy" crystals before converting to cylindrical geometry (as is done on many Siemens scanners). <code>LmToProjData</code>
+    and list mode reconstructions will then put the LORs more accurately (at least when the ``virtual crystals"
+    roughly correspond to gaps between blocks). See the update <tt>.hroot</tt> file in <tt>examples/samples</tt>.<br />
+    <strong>Warning</strong>: if you use the <tt>originating system</tt> to specify the scanner, this will be automatically enabled.
+    (If you do not want this, set it to <tt>User_defined_scanner</tt> and specify all values).<br />
+    <a href="https://github.com/UCL/STIR/pull/617/">PR #617</a>
+  </li>
 </li>
 <li>Moved most code from the <tt>ctac_to_mu_values.cxx</tt> utility to a new
   <code>HUToMuImageProcessor</code> class (derived from <code>DataProcessor</code>.
