Corrected release notes [ci skip]

--- a/documentation/release_5.0.htm
+++ b/documentation/release_5.0.htm
@@ -87,6 +87,7 @@ improvements to the documentation.
 </li>
 <li><tt>SSRB</tt> now has the option of taking a template sinogram.
 </li>
+  <li>Logcosh Prior.</li>
 </ul>
 
 
