--- a/documentation/release_4.1.htm
+++ b/documentation/release_4.1.htm
@@ -90,7 +90,6 @@
     <li><code>ScatterEstimation</code> has now many more <code>set*</code> functions such that most
       (all?) parameters can be set from C++/Python (i.e. without parsing).
     </li>
-    <li><code>axpby</code> was introduced on the release_4 branch after STIR 4.0 but is now deprecated</li>      
     </ul>
   </li>
 
@@ -195,7 +194,8 @@ from the above):</H2>
 
 <h3>New functionality</h3>
 <ul>
-  <li>Addition of <code>axpby</code> method for <code>Array</code> and all inherited classes.</li>
+  <li>Addition of <code>xapyb</code> and <code>sapyb</code> methods for <code>Array</code> and all inherited classes.
+      (code>axpby</code> was introduced on the release_4 branch after STIR 4.0 but is now deprecated).</li>
   <li><code>ProjDataInMemory</code> now provides iterators.</li>
   <li>added <code>get_sinograms()</code> and <code>size_all()</code> to <code>ProjDataInfo</code></li>
   <li>added functions for date-time processing</li>
