minor fixes to release_4.1.htm [ci skip]

--- a/documentation/release_4.1.htm
+++ b/documentation/release_4.1.htm
@@ -17,13 +17,13 @@
         <li>Palak Wadhwa (Leeds) addition of support for GE Signa PET/MR, with help from many others, including
           coding by Ottavia Bertolli (UCL), Nikos Efthimiou (Hull), Elise Emond (UCL) and Kris Thielemans (UCL),
           and supervision by Ch. Tsoumpas (Leeds). This work received help from GE Healthcare with particular thanks to
-          Gaspar Delso, Kristen Wangerin and Floris Jansen. See the publication for more details<br />
+          Gaspar Delso, Kristen Wangerin and Floris Jansen. See the following publication for more details<br />
           Palak Wadwha et al.<br />
           <cite>PET Image Reconstruction Using Physical and Mathematical Modelling For Time of Flight PET-MR Scanners in the STIR Library</cite><br />
           Methods 2020,
           DOI: <a href=https://doi.org/10.1016/j.ymeth.2020.01.005>10.1016/j.ymeth.2020.01.005</a>
         </li>
-        <li>Ander Biguri (UCL) for extending the Signa support to other GE scanners using RDF9</li>
+        <li>Ander Biguri (UCL) for extending the Signa support to GE PET/CT scanners using RDF9</li>
         <li>Richard Brown (UCL) for wrapping of NiftyPET's GPU functionality for projecting and unlisting</li>
         <li>Robert Twyman (UCL) for Relative Difference Prior, computation of the log-likelihood modification, and GATE geometry check fixes. </li>  
         <li>Gemma Fardell (UKRI) for implementing <code>xapyb</code> and <code>sapyb</code> array methods. </li>  
@@ -163,7 +163,9 @@ We have currently no work-around (aside from using <code>GRAPHICS=PGM</code> or
  </ul>
 
 <h3>recon_test_pack changes</h3>
+<ul>
 <li>added a test for scatter estimation</li>
+</ul>
 
 <h3>Other changes to tests</h3>
 <ul>
