--- a/documentation/release_5.0.htm
+++ b/documentation/release_5.0.htm
@@ -17,8 +17,9 @@ detailed below.
   <li>At least C++-11 is now required. We are not aware of any problems with most recent versions of C++.</li>
   <li>Maximum Likelihood estimation of normalisation factors now includes estimation of geometric factors.
     This code was contributed by Tahereh Niknejad (work completed at University of Lisbao, Portugal and PETsys Electronics, together with Kris Thielemans, UCL)
-  <li>Calibration factor can be applied in the normalisation with a new BinNormalisation derived class "BinNormalisationWithCalibration"; Exam_info, TimeFrameDeifinition and PatientPosition have now a == operator; Interfile now reads/write isotope name and calibration factor. This  code was contributed by Daniel Deidda (NPL) and Kris Thielemans (UCL).
-  </li>
+  <li>Calibration factor can be applied in the normalisation with a new <code>BinNormalisation</code> derived class <code>BinNormalisationWithCalibration</code>; 
+	  Interfile now reads/writes isotope name and calibration factor. See <a href=https://github.com/UCL/STIR/pull/672>PR 672</a>.
+	  This  code was contributed by Daniel Deidda (NPL) and Kris Thielemans (UCL)</li>
 
 </ul>  
 </p>
@@ -97,9 +98,8 @@ improvements to the documentation.
 </li>
 <li><tt>SSRB</tt> now has the option of taking a template sinogram.
 </li>
-<li><tt>BinNormalisationWithCalibration</tt> is a new class derived from BinNormalisation. This class allows to apply calibration factor from the scanner and save the information into the interfile header. To use this, a specific BinNormalisation class should be derived from BinNormalisationWithCalibration, the information about the calibration factor read, and the function get_uncalibrated_bin_efficiencies() needs to be overwritten. Note that also the isotope name and branching ratio can be set here (the latter will need to be set according to the isotope by reading into a radionuclide database). BinNormalisationSPECT already reads Calibration factor and isotope name and apply the calibration factor read from interfile. Since not all SPECT scanner do quantitative reconstruction an option of setting the calibration factor from the parameter file is added. Factors for BinNormalisationECA8/ECAT7 and GEHDF5 are set to one at the moment as we need to double check on the meaning of cross calibration factor for ECAT and find out hoe to read them for GEHDF5. Documentation for this is pending and will be added in the following PR.
+<li><code>BinNormalisationWithCalibration</code> is a new class derived from <code>BinNormalisation</code>. This class allows to apply calibration factor from the scanner and save the information into the interfile header. To use this, a specific BinNormalisation class should be derived from BinNormalisationWithCalibration, the information about the calibration factor read, and the function get_uncalibrated_bin_efficiencies() needs to be overwritten. Note that also the isotope name and branching ratio can be set here (the latter will need to be set according to the isotope by reading into a radionuclide database). BinNormalisationSPECT already reads Calibration factor and isotope name and apply the calibration factor read from interfile. Since not all SPECT scanner do quantitative reconstruction an option of setting the calibration factor from the parameter file is added. Factors for BinNormalisationECA8/ECAT7 and GEHDF5 are set to one at the moment as we need to double check on the meaning of cross calibration factor for ECAT and find out hoe to read them for GEHDF5. Documentation for this is pending and will be added in the following PR.
 </li>
-<li><tt>Exam_info, TimeFrameDeifinition and PatientPosition have now a == operator </li>
  <li>Logcosh Prior.</li>
 <li>
 	SAFIR input file format now supports a Gaussian LOR randomization, which is applied on the endpoints of each LOR when sorting the listmode events into virtual scanner projection data.
@@ -224,6 +224,7 @@ as used by <code>copy_to</code> and <code>fill_from</code>
   Generalised prior and Quadratic prior have a new method <code>accumulate_Hessian_times_input(output, current_estimate, input)</code>. This computes the hessian of the prior at the <code>current_image_estimate</code> and multiplies this by <code>input</code>.
   Before this, the <code>add_multiplication_with_approximate_Hessian(output, input)</code> method was used that assumed a quadratic function and therefore <code>hessian = 1</code>.
 </li>
+<li><code>Exam_info</code>, <code>TimeFrameDefinition</code> and <code>PatientPosition </code> have now a <code>==</code> operator</li>
 </ul>
 
 
