--- a/documentation/release_5.0.htm
+++ b/documentation/release_5.0.htm
@@ -21,6 +21,7 @@ detailed below.
 	  Interfile now reads/writes isotope name and calibration factor. See <a href=https://github.com/UCL/STIR/pull/672>PR 672</a>.
 	  This  code was contributed by Daniel Deidda (NPL) and Kris Thielemans (UCL)</li>
 
+  <li>KOSMAPOSL (HKEM) allows now to freeze the iterative part of the kernel to a specific subiteration. Code contributed by Daniel Deidda (NPL), Kris Thielemans (UCL) and Ashley Gillman (CSIRO)</li>
 </ul>  
 </p>
 
@@ -97,7 +98,9 @@ improvements to the documentation.
 <li><tt>list_image_info</tt> now works for dynamic images, with a new <tt>--per-volume</tt> option to list min/max/sum for every volume.
 </li>
 <li><tt>SSRB</tt> now has the option of taking a template sinogram.
-</li>
+</li> 
+ <li><tt>KOSMAPOSL</tt> (HKEM) allows now to freeze the iterative part of the kernel to a specific subiteration. This can be set in the parameterfile through the keyword "freeze_iterative_kernel_at_subiter_num"
+</li>     
 <li><code>BinNormalisationWithCalibration</code> is a new class derived from <code>BinNormalisation</code>. This class allows to apply calibration factor from the scanner and save the information into the interfile header. To use this, a specific BinNormalisation class should be derived from BinNormalisationWithCalibration, the information about the calibration factor read, and the function get_uncalibrated_bin_efficiencies() needs to be overwritten. Note that also the isotope name and branching ratio can be set here (the latter will need to be set according to the isotope by reading into a radionuclide database). BinNormalisationSPECT already reads Calibration factor and isotope name and apply the calibration factor read from interfile. Since not all SPECT scanner do quantitative reconstruction an option of setting the calibration factor from the parameter file is added. Factors for BinNormalisationECA8/ECAT7 and GEHDF5 are set to one at the moment as we need to double check on the meaning of cross calibration factor for ECAT and find out hoe to read them for GEHDF5. Documentation for this is pending and will be added in the following PR.
 </li>
  <li>Logcosh Prior.</li>
