added documentation on parallelproj [ci skip]

--- a/documentation/release_5.0.htm
+++ b/documentation/release_5.0.htm
@@ -14,15 +14,17 @@ detailed below.
 <h2>Overall summary</h2>
 <p>
 <ul>
-  <li>At least C++-11 is now required. We are not aware of any problems with most recent versions of C++.</li>
+  <li>At least C++-11 is now required. We are not aware of any problems with more recent versions of C++.</li>
   <li>Maximum Likelihood estimation of normalisation factors now includes estimation of geometric factors.
-    This code was contributed by Tahereh Niknejad (work completed at University of Lisbao, Portugal and PETsys Electronics, together with Kris Thielemans, UCL)
+    This code was contributed by Tahereh Niknejad (work completed at University of Lisbao, Portugal and PETsys Electronics, together with Kris Thielemans, UCL).</li>
   <li>Calibration factor can be applied in the normalisation with a new <code>BinNormalisation</code> derived class <code>BinNormalisationWithCalibration</code>; 
 	  Interfile now reads/writes isotope name and calibration factor. See <a href=https://github.com/UCL/STIR/pull/672>PR 672</a>.
 	  This  code was contributed by Daniel Deidda (NPL) and Kris Thielemans (UCL)</li>
 
   <li>KOSMAPOSL (HKEM) allows now to freeze the iterative part of the kernel at a specific subiteration. Code contributed by Daniel Deidda (NPL), Kris Thielemans (UCL) and Ashley Gillman (CSIRO)</li>
-</ul>  
+  <li>It is now possibly to call the <a href=https://github.com/gschramm/parallelproj>Georg's Schramm parallelproj</a>
+    projectors (using either OpenMP or CUDA).</li>
+</ul>
 </p>
 
 
@@ -60,6 +62,12 @@ improvements to the documentation.
 
 <h3>New functionality</h3>
 <ul>
+  <li><a href=https://github.com/gschramm/parallelproj>Georg's Schramm parallelproj</a> is an
+    implementation of the Joseph algorithm for projection. If it has been installed
+    in your system, and you tell CMake where to find it (`parallelproj_DIR=/wherever/lib/cmake`), the STIR user is
+    now able to select an additional projector, called <code>Parallelproj</code>. This will use the CUDA
+    version if available, otherwise will fall-back to the OpenMP version. Check the new sample files in
+    <tt>examples/samples</tt> and the section in the User's Guide.</li>
   <li>The (still preliminary) code for Maximum Likelihood estimation of normalisation factors now includes estimation of geometric factors in 3D as well. See<br />
     Tahereh Niknejad, Stefaan Tavernier, Joao Varela, and Kris Thielemans,
     <cite>Validation of 3D Model-Based Maximum-Likelihood Estimation of Normalisation Factors for Partial Ring Positron Emission Tomography</cite>
