ml_norm part with new code

--- a/documentation/release_5.0.htm
+++ b/documentation/release_5.0.htm
@@ -99,6 +99,8 @@ improvements to the documentation.
   with multiple time frames (corresponding to the time frames of the data where the parametric image is derived from).
   In some cases, there could only be a single time frame (start to end of the study).
   </li>
+  <li> <code>find_ML_normfactors3D</code> and <code>apply_ML_normfactors3D</code> can be used for scanner with virtual crystal(Only verified on mCT).
+  </li>
 </ul>
 
 
