--- a/documentation/release_5.0.htm
+++ b/documentation/release_5.0.htm
@@ -127,7 +127,8 @@ improvements to the documentation.
   with multiple time frames (corresponding to the time frames of the data where the parametric image is derived from).
   In some cases, there could only be a single time frame (start to end of the study).
   </li>
-  <li> <code>find_ML_normfactors3D</code> and <code>apply_ML_normfactors3D</code> can be used for scanner with virtual crystal(Only verified on mCT).
+  <li> <code>find_ML_normfactors3D</code> and <code>apply_ML_normfactors3D</code> can be used for scanner with virtual crystal (Only verified on mCT).
+      Contributed by Gefei Chen, see <a href=https://github.com/UCL/STIR/pull/833>PR 833</a>.
   </li>
   <li><tt>apply_patlak_to_images</tt> no longer uses an existing file as a template for the dynamic image but will overwrite it.</li>
 	<li><tt>ROOT</tt> file I/O improvements no longer gets entire entry's tree and instead loads individual branches as needed.
