--- a/documentation/release_5.0.htm
+++ b/documentation/release_5.0.htm
@@ -115,6 +115,8 @@ improvements to the documentation.
 <li>
 	SAFIR input file format now supports a Gaussian LOR randomization, which is applied on the endpoints of each LOR when sorting the listmode events into virtual scanner projection data.
 </li>
+<li><code>Scanner</code> has now a new <code>static</code> member <code>get_names_of_predefined_scanners</code> returning a list of names.
+</li>
 </ul>
 
 
