--- a/documentation/release_5.0.htm
+++ b/documentation/release_5.0.htm
@@ -124,7 +124,7 @@ improvements to the documentation.
 <ul>
 <li>
 View Offset Support enabled for the scanners with intrinsic azimutal tilt angle.
-<p><strong>WARNING</strong>:For the scanners that have non-zero view-offset, images will now get rotated. Backward compatibility achieved by disabling the CMAKE View Offset option. </p>
+<p><strong>WARNING</strong>:For the scanners that have non-zero view-offset, images will now get rotated. Backward compatibility for reconstructed images can be achieved by setting the <tt>STIR_LEGACY_IGNORE_VIEW_OFFSET</tt> CMake option to <tt>ON</tt>. (However, copied sinogram data will then always have the offset set to 0, in contrast to earlier versions of STIR).</p>
 <p>To reflect this change, <code>Scanner::get_default_intrinsic_tilt()</code> has been renamed to <code>get_intrinsic_azimuthal_tilt()</code>.</p>
 </li>
 <li>
