--- a/documentation/release_5.0.htm
+++ b/documentation/release_5.0.htm
@@ -50,8 +50,18 @@ improvements to the documentation.
 
 <h3>Changes breaking backwards compatibility from a user-perspective</h3>
 <ul>
-  <li> </li>
-  <ul>
+<li>
+View Offset Support enabled for the PET scanners.
+<ul>
+ <li>For the scanners that have non-zero intrinsic azimuthal tilt angle, reconstructed images will now get rotated.</li>
+ <li>If you use view mashing, in previous STIR versions images were rotated according to half the number of mashed views. This is now corrected.</li>
+</ul>
+<strong>WARNING</strong> This means that reconstructed PET images will <strong>not be identical</strong> when either the scanner has non-zero view-offset, or view-mashing is on.<br />
+To reflect this change, <code>Scanner::get_default_intrinsic_tilt()</code> has been renamed to <code>get_intrinsic_azimuthal_tilt()</code>.<br />
+Note: start angle was already supported for SPECT<br />
+Backward compatibility for reconstructed images can be achieved by setting the <tt>STIR_LEGACY_IGNORE_VIEW_OFFSET</tt> CMake option to <tt>ON</tt>. (However, copied sinogram data will then always have the offset set to 0, in contrast to earlier versions of STIR).
+</li>
+</ul>
 
 
 <h3>Bug fixes</h3>
@@ -122,13 +132,6 @@ improvements to the documentation.
 
 <h3>Changed functionality</h3>
 <ul>
-<li>
-View Offset Support enabled for the PET scanners with intrinsic azimutal tilt angle.
-<p><strong>WARNING</strong>:For the scanners that have non-zero view-offset, images will now get rotated. Backward compatibility for reconstructed images can be achieved by setting the <tt>STIR_LEGACY_IGNORE_VIEW_OFFSET</tt> CMake option to <tt>ON</tt>. (However, copied sinogram data will then always have the offset set to 0, in contrast to earlier versions of STIR).</p>
-<p>To reflect this change, <code>Scanner::get_default_intrinsic_tilt()</code> has been renamed to <code>get_intrinsic_azimuthal_tilt()</code>.</p>
-Note: start angle was already supported for SPECT
-</li>
-<li>
 <li>Many operations with <code>ProjDataInMemory</code> are now much faster (it now uses an underlying 1D array).
 </li>
 <li>
