--- a/documentation/release_5.0.htm
+++ b/documentation/release_5.0.htm
@@ -140,8 +140,9 @@ Backward compatibility for reconstructed images can be achieved by setting the <
   In some cases, there could only be a single time frame (start to end of the study).
   </li>
 <li><tt>apply_patlak_to_images</tt> no longer uses an existing file as a template for the dynamic image but will overwrite it.</li>
-	<li><tt>ROOT</tt> file I/O improvements no longer gets entire entry's tree and instead loads individual branches as needed.
-    ROOT file reading is now up to 4x faster. In addition, there is now an option <tt>check energy window information</tt> (defaulting to on).</li>
+	<li><tt>ROOT</tt> file I/O improvements. An entire entry's tree is no longer loaded by default and instead individual branches are loaded as needed.
+    ROOT file event processing is now up to 4x faster. In addition, there is now an option to <tt>check energy window information</tt> (defaulting to on).
+    Futhermore, added functionality to exclude true and unscattered event types from list mode processing. </li>
 </ul>
 
 
