update release_4.1 notes regarding license change [ci skip]

--- a/documentation/release_4.1.htm
+++ b/documentation/release_4.1.htm
@@ -34,6 +34,18 @@
 
 <h2> Summary for end users (also to be read by developers)</h2>
 
+<h3>License change</h3>
+    <p>The license used to distribute STIR has now changed! As opposed to the LPGL and/or GPL license, almost all modifications
+      and additions since version 0.92 in 2001 are now licensed under the
+      <a href="https://www.apache.org/licenses/LICENSE-2.0">Apache 2.0 license</a>. This is a more permissive license
+      than both LGPL and GPL. Please note that older files are still covered by the <a href="http://stir.sourceforge.net/registration/PARAPETlicense.htm">PARAPET license</a>, which is permissive as well.</p>
+    <p>Unfortunately there is one exception: updates since PARAPET to the FourierRebinning.cxx are still licensed under the
+      LPGL 2.1 license. Therefore, if you use Fourier Rebinning, you should probably assume that the STIR library is licensed
+      under the LPGL-2.1.</p>
+    <p>License information is now indicated in the files using <a href="https://spdx.dev/ids/">SPDX identifiers</a>.
+      This allows easier automatic checking and is also more compact.</p>
+    <p>Some more information is in the distributed <tt>LICENSE.txt</tt>.</p>
+    <p>We would like to thank all previous contributors and their institutions who agreed to relicense their work.</p>
 
 <h3>New functionality</h3>
 <ul>
